Update message to notification
