# bin/swagger/output/routes.js
@@ -54,6 +54,7 @@ const models = {
             "toUserName": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double", "required": true },
+            "announced": { "dataType": "boolean" },
             "created": { "dataType": "double", "required": true },
             "updated": { "dataType": "double", "required": true },
         },
@@ -74,6 +75,7 @@ const models = {
             "toUserId": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double" },
+            "announced": { "dataType": "boolean" },
         },
     },
     "MessageDetailViewApp": {
@@ -86,7 +88,6 @@ const models = {
     "MessageViewWithPaginationApp": {
         "properties": {
             "messages": { "dataType": "array", "array": { "ref": "MessageDetailViewApp" }, "required": true },
-            "totalItems": { "dataType": "double", "required": true },
         },
     },
     "MessageViewWithPaginationAnUserApp": {
@@ -94,7 +95,6 @@ const models = {
             "userId": { "dataType": "string", "required": true },
             "userName": { "dataType": "string", "required": true },
             "messages": { "dataType": "array", "array": { "ref": "MessageDetailView" }, "required": true },
-            "totalItems": { "dataType": "double", "required": true },
         },
     },
     "MessageView": {
@@ -103,6 +103,7 @@ const models = {
             "toUserId": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double" },
+            "announced": { "dataType": "boolean" },
         },
     },
     "MUserView": {
@@ -429,11 +430,6 @@ function RegisterRoutes(app) {
     });
     app.get('/api/user/v1/Message/getforapp', authenticateMiddleware([{ "name": "jwt" }]), function (request, response, next) {
         const args = {
-            query: { "in": "query", "name": "query", "dataType": "string" },
-            pageNumber: { "in": "query", "name": "pageNumber", "dataType": "double" },
-            itemCount: { "in": "query", "name": "itemCount", "dataType": "double" },
-            from: { "in": "query", "name": "from", "dataType": "string" },
-            to: { "in": "query", "name": "to", "dataType": "string" },
             req: { "in": "request", "name": "req", "dataType": "object" },
         };
         let validatedArgs = [];
@@ -450,11 +446,6 @@ function RegisterRoutes(app) {
     app.get('/api/user/v1/Message/getforanuserapp', authenticateMiddleware([{ "name": "jwt" }]), function (request, response, next) {
         const args = {
             userIdToGetMessage: { "in": "query", "name": "userIdToGetMessage", "required": true, "dataType": "string" },
-            query: { "in": "query", "name": "query", "dataType": "string" },
-            pageNumber: { "in": "query", "name": "pageNumber", "dataType": "double" },
-            itemCount: { "in": "query", "name": "itemCount", "dataType": "double" },
-            from: { "in": "query", "name": "from", "dataType": "string" },
-            to: { "in": "query", "name": "to", "dataType": "string" },
             req: { "in": "request", "name": "req", "dataType": "object" },
         };
         let validatedArgs = [];
@@ -466,6 +457,21 @@ function RegisterRoutes(app) {
         }
         const controller = index_1.iocContainer.get(MessageApiController_1.MessageApiController);
         const promise = controller.getListMessageOfUser.apply(controller, validatedArgs);
+        promiseHandler(controller, promise, response, next);
+    });
+    app.get('/api/user/v1/Message/get-message-to-notification', authenticateMiddleware([{ "name": "jwt" }]), function (request, response, next) {
+        const args = {
+            req: { "in": "request", "name": "req", "dataType": "object" },
+        };
+        let validatedArgs = [];
+        try {
+            validatedArgs = getValidatedArgs(args, request);
+        }
+        catch (err) {
+            return next(err);
+        }
+        const controller = index_1.iocContainer.get(MessageApiController_1.MessageApiController);
+        const promise = controller.getMessageToNotification.apply(controller, validatedArgs);
         promiseHandler(controller, promise, response, next);
     });
     app.post('/api/user/v1/Message', authenticateMiddleware([{ "name": "jwt" }]), function (request, response, next) {
