# swagger/output/routes.ts
@@ -53,6 +53,7 @@ const models: TsoaRoute.Models = {
             "toUserName": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double", "required": true },
+            "announced": { "dataType": "boolean" },
             "created": { "dataType": "double", "required": true },
             "updated": { "dataType": "double", "required": true },
         },
@@ -73,6 +74,7 @@ const models: TsoaRoute.Models = {
             "toUserId": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double" },
+            "announced": { "dataType": "boolean" },
         },
     },
     "MessageDetailViewApp": {
@@ -85,7 +87,6 @@ const models: TsoaRoute.Models = {
     "MessageViewWithPaginationApp": {
         "properties": {
             "messages": { "dataType": "array", "array": { "ref": "MessageDetailViewApp" }, "required": true },
-            "totalItems": { "dataType": "double", "required": true },
         },
     },
     "MessageViewWithPaginationAnUserApp": {
@@ -93,7 +94,6 @@ const models: TsoaRoute.Models = {
             "userId": { "dataType": "string", "required": true },
             "userName": { "dataType": "string", "required": true },
             "messages": { "dataType": "array", "array": { "ref": "MessageDetailView" }, "required": true },
-            "totalItems": { "dataType": "double", "required": true },
         },
     },
     "MessageView": {
@@ -102,6 +102,7 @@ const models: TsoaRoute.Models = {
             "toUserId": { "dataType": "string", "required": true },
             "content": { "dataType": "string", "required": true },
             "delivered": { "dataType": "double" },
+            "announced": { "dataType": "boolean" },
         },
     },
     "MUserView": {
@@ -482,11 +483,6 @@ export function RegisterRoutes(app: any) {
         authenticateMiddleware([{ "name": "jwt" }]),
         function(request: any, response: any, next: any) {
             const args = {
-                query: { "in": "query", "name": "query", "dataType": "string" },
-                pageNumber: { "in": "query", "name": "pageNumber", "dataType": "double" },
-                itemCount: { "in": "query", "name": "itemCount", "dataType": "double" },
-                from: { "in": "query", "name": "from", "dataType": "string" },
-                to: { "in": "query", "name": "to", "dataType": "string" },
                 req: { "in": "request", "name": "req", "dataType": "object" },
             };
 
@@ -508,11 +504,6 @@ export function RegisterRoutes(app: any) {
         function(request: any, response: any, next: any) {
             const args = {
                 userIdToGetMessage: { "in": "query", "name": "userIdToGetMessage", "required": true, "dataType": "string" },
-                query: { "in": "query", "name": "query", "dataType": "string" },
-                pageNumber: { "in": "query", "name": "pageNumber", "dataType": "double" },
-                itemCount: { "in": "query", "name": "itemCount", "dataType": "double" },
-                from: { "in": "query", "name": "from", "dataType": "string" },
-                to: { "in": "query", "name": "to", "dataType": "string" },
                 req: { "in": "request", "name": "req", "dataType": "object" },
             };
 
@@ -527,6 +518,26 @@ export function RegisterRoutes(app: any) {
 
 
             const promise = controller.getListMessageOfUser.apply(controller, validatedArgs);
+            promiseHandler(controller, promise, response, next);
+        });
+    app.get('/api/user/v1/Message/get-message-to-notification',
+        authenticateMiddleware([{ "name": "jwt" }]),
+        function(request: any, response: any, next: any) {
+            const args = {
+                req: { "in": "request", "name": "req", "dataType": "object" },
+            };
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request);
+            } catch (err) {
+                return next(err);
+            }
+
+            const controller = iocContainer.get<MessageApiController>(MessageApiController);
+
+
+            const promise = controller.getMessageToNotification.apply(controller, validatedArgs);
             promiseHandler(controller, promise, response, next);
         });
     app.post('/api/user/v1/Message',
